--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         </main>
     </div>
     </div>
-    <script src="./scripts/dropdown.js"></script>
-    <script src="./Components/header.js"></script>
-    <script src="./Components/sidebar.js"></script>
-    <script src="./scripts/gsap.min.js"></script>
+    <script src="scripts/dropdown.js"></script>
+    <script src="Components/header.js"></script>
+    <script src="Components/sidebar.js"></script>
+    <script src="scripts/gsap.min.js"></script>
 
 
 </body>
