--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     </div>
     </div>
     <script src="scripts/dropdown.js"></script>
-    <script src="Components/header.js"></script>
-    <script src="Components/sidebar.js"></script>
+    <script src="components/header.js"></script>
+    <script src="components/sidebar.js"></script>
     <script src="scripts/gsap.min.js"></script>
 
 
